* 2014-02-26 - thorben.betten@open-xchange.com

 - Fix for bug 31316: Check for a syntactically empty-element tag prior to marking it

* 2014-02-25 - marc.arens@open-xchange.com

 - Fix for bug 31300: Retrieve client state after blocking cleanup of local member
 
* 2014-02-25 - martin.herfurth@open-xchange.com

 - Fix for bug 31191: Fixed erroneous permission check.

* 2014-02-25 - thorben.betten@open-xchange.com

 - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
 - Fix for bug 31287: Do not apply black-list on provisioning calls
 - Fix for bug 31222: Signal support for SSLv3 protocol on secure connect to POP3 server
 - Fix for bug 31302: Set reasonable timeouts when checking connectivity + several other improvements
 - Fix for bug 31177: Only invoke 'java.util.concurrent.locks.Condition.signalAll()' when holding associated lock
 - Fix for bug 31091: Stop reading from stream if EOF is reached

* 2014-02-24 - thorben.betten@open-xchange.com

 - Fix for bug 31264: Added cache invalidator to capabilities caches
 - Fix for bug 30969: Fully leverage from folder cache within folder layer, do not use a custom one in IMAP bundle

* 2014-02-24 - marcus.klein@open-xchange.com

 - Fix for bug 31238: Use the same properties map for the general login method of the LoginPerformer and the AuthenticationService.

* 2014-02-24 - tobias.friedrich@open-xchange.com

- Fix for bug 31249: Be aware of infostore items without files when filtering, set appropriate HTTP status in download response 

* 2014-02-21 - marc.arens@open-xchange.com

 - Fix for bug 31188: Use userId and contextId instead of names when enroling clients

* 2014-02-21 - marcus.klein@open-xchange.com

 - Fix for bug 30761: Do not occupy a database connection without using it.

* 2014-02-21 - thorben.betten@open-xchange.com

 - Fix for bug 31251: Fixed possible NPE on authentication failed error during POP3 sync

* 2014-02-20 - thorben.betten@open-xchange.com
