@@ -3,9 +3,6 @@
 # The client version string
 com.openexchange.twitter.clientVersion=2.2.3
 
-# Whether to use HTTPS or HTTP
-com.openexchange.twitter.http.useSSL=false
-
 # The HTTP proxy host
 com.openexchange.twitter.http.proxyHost=
 
